fixed header logo position on small screen

--- a/src/globalStyle.css
+++ b/src/globalStyle.css
@@ -1,5 +1,6 @@
 .navbar {
     height: 60px;
+    flex-wrap: inherit;
 }
 
 .navbar-light .navbar-toggler {
